gccida/c3/count_one_set
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_one_set/src/loop.c:3974:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_one_set/src/loop.c:4010:47: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( v13 >= ( unsigned int)( ( unsigned int)( mode_class_0[( unsigned __int8)v14] - 5) < 2) + 1 ) 
                                              ^~~~~~~~~~~~
                                              mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_one_set/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/count_one_set/src/obj/loop.o] Error 1
